Bug 90876 - FILEOPEN: Chart Axis Label replaces Legend on OOXML round trip
Summary: FILEOPEN: Chart Axis Label replaces Legend on OOXML round trip
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.0.0
Keywords: bibisectRequest, regression
: 90877 (view as bug list)
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2015-04-26 09:11 UTC by Luke
Modified: 2015-12-17 08:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example chart with legend (12.44 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2015-04-26 09:11 UTC, Luke
Details
Original in Excel on left, round-trip on the right in Calc (144.88 KB, image/png)
2015-04-26 09:14 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-04-26 09:11:39 UTC
Created attachment 115112 [details]
Example chart with legend

Steps to reproduce:
1. In Excel create a chart
2. click Add Legend
3. Open in LO
4. Save as XLSX or DOCX

Note how on the round trip the Legend name has changed from Series 1 to [2001, 2003, 2003, 2004].
Comment 1 Luke 2015-04-26 09:14:17 UTC
Created attachment 115113 [details]
Original in Excel on left, round-trip on the right in Calc
Comment 2 raal 2015-04-26 09:57:58 UTC
I can confirm with Version: 5.0.0.0.alpha1+
Build ID: e9fbe1f7cd28de2a9da8089d89e903406165eb56
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-04-25_00:20:28
and excel 2010
Comment 3 Luke 2015-04-26 10:01:38 UTC
Added Markus as he's working on charts now.
Comment 4 raal 2015-04-26 10:10:19 UTC
No problem with LO 4.3.3, linux 

@Luke, what's your version of LO? If <5, then change field Version accordingly.
Comment 5 Markus Mohrhard 2015-05-03 04:39:54 UTC
Ok, this was once again a MSO 2007 vs OOXML export problem.
Comment 6 Markus Mohrhard 2015-05-03 04:42:57 UTC
*** Bug 90877 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2015-05-03 05:40:45 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dcc6c0770d57a4b70813b72feb9b5bb2541cf4a7

don't assume varyColors for barCharts, tdf#90876

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-05-03 05:40:49 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3e2f2e562c15e690b947e11a49f1443d71f87e9e

don't assume varyColors for bubbleChart, related tdf#90876

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2015-05-03 05:40:52 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4fb32d8ac28c5fb9e6a230818be0c05da9b53ad4

add test for tdf#90876

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Luke 2015-05-04 04:15:51 UTC
Verified Fixed in:
Version: 5.0.0.0.alpha1+
Build ID: 98436c4b53639d86f261ac630c46d32e3c7b8e28

Thank you Markus!
Comment 11 Robinson Tryon (qubit) 2015-12-17 08:59:13 UTC Comment hidden (obsolete)