don't assume varyColors for barCharts, tdf#90876

Change-Id: I754d667fa9f909916265bd9320f1bd56d2226ecd