oox/source/export/chartexport.cxx
@@ -1549,6 +1549,12 @@ void ChartExport::exportBarChart( Reference< chart2::XChartType > xChartType )
             FSEND );
 
     exportGrouping( true );
+
+    const char* varyColors = "0";
+    pFS->singleElement( FSNS( XML_c, XML_varyColors ),
+            XML_val, varyColors,
+            FSEND );
+
     sal_Int32 nAttachedAxis = AXIS_PRIMARY_Y;
     exportSeries( xChartType, nAttachedAxis );
 
